src/components/select/select.scss
@import '../../style/variables';

$mdc-select-fill-color: $mdc-theme-background;
$mdc-select-bottom-line-idle-color: $lime-text-field-bottom-line-color;
$mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;

@import "@limetech/mdc-select/mdc-select";
@import '@limetech/mdc-ripple/mdc-ripple';
@import "@limetech/mdc-line-ripple/mdc-line-ripple";
@import "@limetech/mdc-floating-label/mdc-floating-label";
@import "@limetech/mdc-menu-surface/mdc-menu-surface";


:host([hidden]) {
    display: none;
}


.limel-select__selected-text {
    padding: pxToRem(20) pxToRem(52) pxToRem(4) pxToRem(16);
    box-sizing: border-box;
    border: none;
    border-bottom: pxToRem(1) solid;
    outline: none;
    background-color: transparent;
    white-space: nowrap;
    border-bottom-color: $lime-text-field-bottom-line-color;
}

.mdc-select {
    @include mdc-states-hover-opacity(0);
    @include mdc-states-focus-opacity(0, true);
    width: 100%;

    &__native-control {
        padding-top: pxToRem(25);
        padding-bottom: pxToRem(2);
        color: transparent !important;
    }

    .limel-select__selected-text {
        width: 100%;
        height: pxToRem(56);
        position: absolute;
        z-index: -1;
    }
}

.limel-select {

    &,
    .limel-select-trigger,
    .limel-select__selected-text {
        width: 100%;
        height: pxToRem(56);
        position: relative;
    }

    .limel-select__selected-text {
        line-height: pxToRem(28);
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .limel-select-trigger {
        display: inline-flex;
        cursor: pointer;

        &:focus {
            outline: none;

            .mdc-floating-label {
                color: var(--mdc-theme-primary);
            }

            .mdc-line-ripple {
                transform: scaleX(1);
                opacity: 1;
                background-color: var(--mdc-theme-primary);
            }

            .mdc-select__dropdown-icon {
                transform: rotate(180deg) translateY(pxToRem(-5));
                color: var(--mdc-theme-primary);
            }
        }

        .mdc-floating-label {
            left: pxToRem(16);
            right: auto;
            top: pxToRem(21);
            pointer-events: none;

            &.mdc-floating-label--float-above {
                top: pxToRem(17);
            }

            &.mdc-floating-label--active {
                color: var(--mdc-theme-primary);
            }
        }

        .mdc-line-ripple {
            background-color: var(--mdc-theme-primary);
        }

        .mdc-select__dropdown-icon {
            background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='10' height='5' viewBox='7 10 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' opacity='.54' d='M7 10l5 5 5-5z'/%3E%3C/svg%3E") no-repeat 50%;
        }
    }

    &.limel-select--required {
        .mdc-floating-label::after {
            content: "*";
        }
    }

    &.limel-select--invalid {
        .limel-select-trigger {
            .mdc-floating-label {
                color: $mdc-theme-error;
            }
            .mdc-line-ripple {
                background-color: $mdc-theme-error;
                transform: scaleX(1);
                opacity: 1;
            }
        }
    }

    &.limel-select--empty {
        limel-portal {
            margin-top: pxToRem(-8);
        }
    }
}

